agregue un parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Hola mundo</h1>
     <h2>Soy un subtitulo</h2>
+    <p>Este es un cambio que hice ahr. Lorena.</p>
   </body>
 </html>
