agregue parrafo en navbar

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h2>Soy un subtitulo</h2>
     <p>Este es un cambio que hice ahr. Lorena.</p>
     <h3>Agregando un titulo despues de clonar lalaa</h3>
+    <p>Agregando otro parrafo desde otra rama juasjuas</p>
   </body>
 </html>
